# cargo-management

./: README.md  pyproject.toml
cargo_management/parcel_management/doctype/parcel/: constants.py  parcel.js  parcel.json  parcel.py
cargo_management/parcel_management/doctype/parcel/api/: easypost_api.py
cargo_management/public/: carriers.json
cargo_management/shipment_management/: utils.py
cargo_management/shipment_management/doctype/cargo_shipment/: actions.py  cargo_shipment.js  cargo_shipment.json  cargo_shipment.py
cargo_management/shipment_management/doctype/cargo_shipment_line/: cargo_shipment_line.json
cargo_management/shipment_management/doctype/cargo_shipment_receipt/: actions.py  cargo_shipment_receipt.json
cargo_management/shipment_management/doctype/cargo_shipment_receipt_line/: cargo_shipment_receipt_line.json
cargo_management/warehouse_management/doctype/warehouse_receipt/: warehouse_receipt.js  warehouse_receipt.json  warehouse_receipt.py
cargo_management/warehouse_management/doctype/warehouse_receipt_line/: warehouse_receipt_line.json  warehouse_receipt_line.py
