[project]
name = "cargo_management"
authors = [
    { name = "Agile Shift", email = "contacto@gruporeal.org" }
]
description = "ERPNext Cargo Management for Freight Forwarders"
readme = "README.md"
dynamic = ["version"]


[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

typing-modules = ["frappe.types.DF"]
